sorted/tests/03-out-of-order.stderr
error: SomethingFailed should sort before ThatFailed
  |
7 |     SomethingFailed,
  |     ^^^^^^^^^^^^^^^
